css/visual-style-agence.css
/* ... */
.gla-item > a {
    height: 100%;
    border: 1px solid #DDDDDD;
}

.gla-item:first-child {
    margin-top: 0;
}

.news-home .gla-item:nth-child(2) {
    top: 40px;
    position: relative;
}


.grid-la-list {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
}

.gla-item-desc {
    line-height: 2.5rem;
}

.grid-la-list > * {
    width: inherit;
}

.gla-item-tag {
    background: #08205C;
}

.gla-item > a {
    display: inherit;
    -webkit-box-flex: inherit;
    flex: inherit;
    overflow: inherit;
}
.gla-item-btn {
    text-align: left;
    margin-top: 2rem !important;
}

.gla-btn-read-more {
    color: #0754FA;
    line-height: 1;

}

.gla-btn-read-more:hover {
    color: #0754FA;
}

.gla-btn-read-more i:before {
    content: "+";
    float: left;
    line-height: 2.6rem;
    margin-right: .5rem;
    font-size: 3rem;
    font-family: "Poppins", sans-serif;
    font-weight: 100;
}

.inside, .article-wrapper {
    padding: 0;
}

.article-focus {
    background: none;
    font-family: "Poppins", sans-serif;
    font-size: 2rem;
    color: #383838;
}

.article-focus .af-title {
    display: none;
}

.article-focus p {
    line-height: 4.5rem;
    text-align: left;
}

.landing-page-focus {
    float: left;
    width: 50%;
    margin: 6.5rem 0;
    padding: 150px 2rem 0 2rem;
    background: url('img/quote.svg') no-repeat;
    background-position: top left;
}


/** BLOCK TWITTER **/

.tpt-item.twitter {
    width: 50%;
    float: right;
    margin: 6.5rem 0;
    padding: 0 2rem;
}


/** VIEW FULL ARTICLE **/

.article-content {
    max-width: 1024px;
    margin: 0 auto;
}

.article-title {
    min-height: 480px;
    background: #0745fa url('img/hero-bg.jpg') no-repeat;
    background-size: cover;
    background-position: 50% 50%;
    margin-top: 0;
    margin-bottom: 6rem;
}

.article-title .inside {
    position: relative;
    top: 190px;
}

.article-title .at-content {
    width: 100%;
    position: inherit;
    bottom: inherit;
}

.article-title h1 {
    color: white !important;
}

.at-theme {
    display: none;
    flex: inherit;
    -webkit-box-flex: inherit;
    -webkit-flex: inherit;
    -ms-flex:  inherit;
    order: inherit;
    -webkit-order: inherit;
    -webkit-box-ordinal-group: inherit;
}


.at-main-title {
    -webkit-box-flex: inherit;
    -webkit-flex: inherit;
    -ms-flex: inherit;
    flex: inherit;
    top: 50%;
    -webkit-transform: translateY(-50%);
    -moz-transform: translateY(-50%);
    -ms-transform: translateY(-50%);
    -o-transform: translateY(-50%);
    transform: translateY(-50%);
    position: relative;
    text-shadow: none;
    text-transform: none;
    font-size: 5rem;
    font-family: 'Poppins', sans-serif;
    left: 70px;
    margin: 0;
}

.at-main-title:before {
    content: '';
    display: block;
    background-color: rgba(204, 0, 102, 0);
    border: 15px solid #F7C452;
    height: 125px;
    width: 125px;
    -moz-border-radius:75px;
    -webkit-border-radius: 75px;
    position: absolute;
    top: 50%;
    z-index: -1;
    left: -70px;
    -webkit-transform: translateY(-50%);
    -moz-transform: translateY(-50%);
    -ms-transform: translateY(-50%);
    -o-transform: translateY(-50%);
    transform: translateY(-50%);
}

.article-title img,
.at-publication,
.at-tag {
    display: none;
}


.article-intro {
    display: none;
    margin: 0;
    width: 100%;
    position: relative;
    top: 50%;
    -webkit-transform: translateY(-50%);
    -moz-transform: translateY(-50%);
    -ms-transform: translateY(-50%);
    -o-transform: translateY(-50%);
    transform: translateY(-50%);
    padding-left: 170px;
}

.article-content h2 {
    font-size: 7rem;
}

.article-content h3 {
    font-size: 4.2rem !important;
    font-weight: bold;
}

.article-content h4 {
    font-size: 3.5rem;
}

.article-content h4:before {
    display: none;
}

.article-content h5 {
    font-size: 2rem;
    font-weight: bold;
    font-family: 'Poppins', sans-serif;
}

.article-image {
    margin-bottom: 4rem;
}

.article-content ul li::before {
    background: #1E4BF0;
    border-radius: 20px;
    height: 5px;
    width: 5px;
}

.article-content h3 {
    margin-top: 4rem !important;
}

.article-content h3 + p {
    margin-bottom: 4rem;
}

.article-content blockquote {
    width: 50%;
    padding: 120px 0 0 0;
    margin: 4rem auto 0 auto;
    background: url('img/quote.svg') no-repeat;
    background-position: top left;
    color: #383838;
}

.article-content blockquote p {
    font-size: 2rem !important;
    font-weight: 200;
    line-height: 4.5rem;
    text-align: left;
}

.article-content blockquote + a + h4 {
    margin-top: 2rem !important;
}

.article-content h4 {
    margin-bottom: 2rem !important;
}

.article-content p {
    line-height: 3rem;
}

/* PROFILES */

.cl-content {
    margin: 0;
}

.cl-item-illust img {
    width: 100%;
}

.cl-item-content {
    padding: 1.5rem 0;

}

.h3-like {
    font-size: 2rem;
    text-transform: none;
    color: #001E60;
}

.cl-item-subtitle,
.cl-item-phone {
    font-size: 1.6rem;
    font-weight: 200;
    color: #383838;
}

.cl-item-web a, .cl-item-email a {
    width: 100%;
    color: #001E60;
}

.cl-item-email a:focus, .cl-item-email a:hover {
    border-bottom: none;
}

/* BREADCRUMB */

.article .breadcrumb-nav {
    display: none;
}

.bn-list li a {
    background: none;
    text-transform: none;
    padding: 0;
    font-size: 1.4rem;
}

.bn-item-link {
    font-family: "Roboto", sans-serif;
    font-weight: 400;
    color: #777777;
}

.article .bn-item-link {
    color: white;
}

.bn-list li a:not(:last-child):after {
    content: "  •  ";
    padding: 0 5px;
}

.bn-item:first-child .bn-item-link {
    color: inherit;
}

.bn-item-link:focus,
.bn-item-link:hover,
.bn-item:first-child .bn-item-link:focus,
.bn-item:first-child .bn-item-link:hover {
    text-decoration: none;
    border-bottom: none;
    color: #0645F9;
}
/* ... */

